[package]
name = "rt"
version = "0.1.0"
authors = [ "Boris Faure <billiob@gmail.com>" ]
license = "BSD-2-Clause"
edition = "2018"

[dependencies]
image = "*"
log = "*"
clap = "*"
env_logger = "*"
pretty_env_logger = "0.2"
color_scaling = "0.0.4"
rand = "0.6.*"
rayon = "1.0"
regex = "1"
chrono = "0.4"
time = "0.1"
serde = "1.0"
erased-serde = "0.3"
serde_json = "1.0"
serde_derive = "1.0"
